# Algorithm-W-Step-By-Step

./: .ghci  .gitignore  AlgoW.cabal  AlgorithmW.hs  AlgorithmW.lhs  CREDITS  Expr.hs  Makefile  Pretty.hs  Record.hs  Test.hs  benchmark.hs  cabal.config
Data/Hashable/: Generic.hs
Data/Map/: Utils.hs
Lamdu/: Expr.hs  Infer.hs  Pretty.hs  Suggest.hs
Lamdu/Expr/: Constraints.hs  FlatComposite.hs  Globals.hs  Identifier.hs  Lens.hs  Nominal.hs  Pretty.hs  Pure.hs  Scheme.hs  Type.hs  TypeVars.hs  Val.hs
Lamdu/Expr/Type/: Match.hs
Lamdu/Expr/Val/: Arbitrary.hs
Lamdu/Infer/: Constraints.hs  Error.hs  Load.hs  Memo.hs  Recursive.hs  Scheme.hs  Scope.hs  Specialize.hs  TypeVars.hs  Unify.hs  Update.hs
Lamdu/Infer/Internal/: Constraints.hs  FlatComposite.hs  FlatRecordType.hs  FreeTypeVars.hs  Monad.hs  PositionVars.hs  Scheme.hs  Scope.hs  Subst.hs  TypeVars.hs  Unify.hs
Text/PrettyPrint/HughesPJClass/: Compat.hs
artifacts/: bench_4fca26f  bench_90f767d  expected
lib/: AlgorithmW.hs  Expr.hs  FlatRecordType.hs  FreeTypeVars.hs  Infer.hs  Monad.hs  Pretty.hs  Record.hs  Scheme.hs  Scope.hs  TVs.hs  TypeVars.hs
src/: Test.hs  TestVals.hs  benchmark.hs
