name:                AlgoW
version:             0.1.0.0
synopsis:            Type inference, extending AlgorithmW step-by-step
license:             GPL-3
license-file:        LICENSE
author:              Eyal Lotem
                     Yair Chuchem
maintainer:          eyal.lotem@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -O2
  exposed-modules:     Lamdu.Expr.Constraints
                 ,     Lamdu.Expr.Globals
                 ,     Lamdu.Expr.Identifier
                 ,     Lamdu.Expr.Pure
                 ,     Lamdu.Expr.FlatComposite
                 ,     Lamdu.Expr.Scheme
                 ,     Lamdu.Expr.Type
                 ,     Lamdu.Expr.TypeVars
                 ,     Lamdu.Expr.Val
                 ,     Lamdu.Infer
                 ,     Lamdu.Infer.Error
                 ,     Lamdu.Infer.Load
                 ,     Lamdu.Infer.Unify
                 ,     Lamdu.Infer.Update
                 ,     Lamdu.Suggest
  other-modules:       Lamdu.Infer.Internal.Constraints
               ,       Lamdu.Infer.Internal.Monad
               ,       Lamdu.Infer.Internal.Scheme
               ,       Lamdu.Infer.Internal.Scope
               ,       Lamdu.Infer.Internal.Subst
               ,       Data.Map.Utils
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8
               ,       pretty >=1.1 && <1.2
               ,       containers >=0.5 && <0.6
               ,       lens >=4.1
               ,       transformers >=0.4 && <0.5
               ,       deepseq >=1.3 && <1.4
               ,       deepseq-generics >=0.1 && <0.2
               ,       prettyclass >=1.0 && <1.1
               ,       bytestring >=0.10 && <0.11
               ,       random >=1.0 && <1.1
               ,       binary >=0.7 && <0.8

benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src
  main-is:          benchmark.hs
  other-modules:    TestVals
  build-depends:    base
               ,    criterion
               ,    deepseq
               ,    AlgoW
               ,    lens
               ,    containers
               ,    pretty
               ,    prettyclass
               ,    mtl
  ghc-options:      -O2 -Wall
  default-language:    Haskell2010

executable AlgoW
  ghc-options:         -Wall
  main-is:             Test.hs
  -- other-modules:
  hs-source-dirs:      src
  build-depends:       AlgoW
               ,       base
               ,       containers
               ,       pretty
               ,       prettyclass
               ,       lens
               ,       mtl
  default-language:    Haskell2010
