name:                AlgoW
version:             0.1.0.0
synopsis:            Type inference, extending AlgorithmW step-by-step
license:             GPL-3
license-file:        LICENSE
author:              Eyal Lotem
                     Yair Chuchem
maintainer:          eyal.lotem@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

Flag noprettyclass
    Description: Using pretty>=1.1.2? If so, mustn't depend on prettyclass which was inlined into the pretty package

library
  ghc-options:         -Wall -O2
  ghc-prof-options:    -auto-all -caf-all -rtsopts
  exposed-modules:     Lamdu.Expr.Constraints
                     , Lamdu.Expr.Identifier
                     , Lamdu.Expr.Pure
                     , Lamdu.Expr.FlatComposite
                     , Lamdu.Expr.Lens
                     , Lamdu.Expr.Nominal
                     , Lamdu.Expr.Scheme
                     , Lamdu.Expr.Type
                     , Lamdu.Expr.Type.Match
                     , Lamdu.Expr.TypeVars
                     , Lamdu.Expr.Val
                     , Lamdu.Infer
                     , Lamdu.Infer.Recursive
                     , Lamdu.Infer.Error
                     , Lamdu.Infer.Load
                     , Lamdu.Infer.Unify
                     , Lamdu.Infer.Update
  other-modules:       Lamdu.Infer.Internal.Constraints
                     , Lamdu.Infer.Internal.Monad
                     , Lamdu.Infer.Internal.Scheme
                     , Lamdu.Infer.Internal.Scope
                     , Lamdu.Infer.Internal.Subst
                     , Lamdu.Infer.Internal.Unify
                     , Data.Hashable.Generic
                     , Data.Map.Utils
                     , Text.PrettyPrint.HughesPJClass.Compat
  default-language:    Haskell2010
  build-depends:       base-compat >= 0.8.2 && < 0.9
                     , base >=4.7 && <4.9
                     , containers >=0.5 && <0.6
                     , lens >=4.1
                     , transformers >=0.3 && <0.5
                     , hashable >=1.2 && <1.3
                     , deepseq >=1.3 && <1.5
                     , deepseq-generics >=0.1 && <0.2
                     , bytestring >=0.10 && <0.11
                     , random >=1.0 && <1.2
                     , binary >=0.7 && <0.8
                     , TypeCompose >=0.9 && <0.10
  if flag(noprettyclass)
    build-depends:     pretty >=1.1.2 && <1.2
  else
    build-depends:     pretty >=1.1 && <1.1.2
                     , prettyclass ==1.0.0.0

benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src
  main-is:          benchmark.hs
  other-modules:    TestVals
  build-depends:    base-compat
                  , base
                  , criterion >= 1.0.0.0
                  , deepseq
                  , AlgoW
                  , lens
                  , containers
                  , mtl
  if flag(noprettyclass)
    build-depends:     pretty
  else
    build-depends:     pretty, prettyclass
  ghc-options:         -Wall -O2
  ghc-prof-options:    -auto-all -caf-all -rtsopts
  default-language:    Haskell2010

test-suite algow-test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  ghc-prof-options:    -auto-all -caf-all -rtsopts
  main-is:             Test.hs
  other-modules:       Lamdu.Expr.Val.Arbitrary
                       TestVals
  hs-source-dirs:      ., src
  build-depends:       base-compat
                     , base
                     , AlgoW
                     , QuickCheck
                     , binary
                     , bytestring
                     , containers
                     , deepseq
                     , deepseq-generics
                     , hashable
                     , lens
                     , mtl
                     , TypeCompose
                     , test-framework >= 0.8.1.1
                     , test-framework-quickcheck2 >= 0.3.0.3
                     , transformers
  if flag(noprettyclass)
    build-depends:     pretty
  else
    build-depends:     pretty, prettyclass
  default-language:    Haskell2010
